# cookiecutter-mkdocs

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  main.py  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: Makefile  README.md  build.sh  docker-compose.yml  mkdocs.yml
{{cookiecutter.project_slug}}-docs/: Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml
{{cookiecutter.project_slug}}-docs/compose/mkdocs/: requirements.txt
{{cookiecutter.project_slug}}-docs/docs/: index.md
{{cookiecutter.project_slug}}/compose/mkdocs/: Dockerfile  entrypoint  requirements.txt
{{cookiecutter.project_slug}}/docs/: help.md  index.md
{{cookiecutter.project_slug}}/docs/css/: extra.css
