[project]
name = "cookiecutter-mkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    "build>=1.2.2.post1",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "watchdog[watchmedo]>=6.0.0",
    "wheel>=0.45.1",
]
